--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,4 +5,4 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 #trace<debug<info<warn<error<fatal
 
 #log4j.logger.com.bobo=TRACE,A1
-log4j.logger.com.zhangzhi=debug,A1
+log4j.logger.com.zhangzhi=info,A1
